--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: HYDRA Project
     and hydroclimate fields (PDSI, SST, soil moisture). 
     Analyze lagged regressions, visualize teleconnections, and uncover global drought patterns.
   </p>
-  <a href="https://github.com/yourusername/hydra" class="btn" style="margin-top: 20px; background: #95d5b2; color: #1b4332; padding: 12px 24px; border-radius: 8px; text-decoration: none; font-weight: bold;">
+  <a href="https://github.com/aandishah/hydra" class="btn" style="margin-top: 20px; background: #95d5b2; color: #1b4332; padding: 12px 24px; border-radius: 8px; text-decoration: none; font-weight: bold;">
     View on GitHub
   </a>
 </section>
@@ -73,5 +73,5 @@ jupyter notebook examples/enso_pdsi_regression.ipynb
 <section style="padding: 60px 20px; text-align:center;">
   <h2>🙌 Contributing & Contact</h2>
   <p>Contributions are welcome! Submit a pull request or open an issue.</p>
-  <p>For questions, email <a href="mailto:your.email@domain.edu">your.email@domain.edu</a>.</p>
+  <p>For questions, email <a href="mailto:aandishah.s@columbia.edu">your.email@domain.edu</a>.</p>
 </section>
