--- a/index.html
+++ b/index.html
@@ -3,29 +3,14 @@ layout: default
 title: HYDRA Project
 ---
 
-<!-- Navbar -->
-<nav style="position:fixed; top:0; left:0; right:0; background:#1b4332; padding:10px 30px; display:flex; justify-content:space-between; align-items:center; z-index:1000; box-shadow:0 2px 6px rgba(0,0,0,0.2);">
-  <div style="color:white; font-weight:bold; font-size:1.2em;">
-    HYDRA
-  </div>
-  <div>
-    <a href="#features" style="color:white; margin:0 15px; text-decoration:none;">Features</a>
-    <a href="#example" style="color:white; margin:0 15px; text-decoration:none;">Examples</a>
-    <a href="#quickstart" style="color:white; margin:0 15px; text-decoration:none;">Quick Start</a>
-    <a href="https://github.com/yourusername/hydra" style="color:white; margin:0 15px; text-decoration:none;">GitHub</a>
-  </div>
-</nav>
-
-<!-- Add spacing so banner isn't hidden under fixed navbar -->
-<div style="height:70px;"></div>
-
 <!-- Banner Section -->
 <section style="text-align:center; padding: 80px 20px; background: linear-gradient(135deg, #1b4332, #2d6a4f); color: white;">
   <h1 style="font-size: 3em; margin-bottom: 0.3em;">HYDRA</h1>
   <h2 style="font-weight: 400; margin-bottom: 1em;">HYdrological Drought & Rainfall Atlas</h2>
   <p style="font-size: 1.2em; max-width: 700px; margin: 0 auto;">
     A Python toolkit for exploring the links between climate variability modes (ENSO, PDO, AMO, IOD) 
-    and hydroclimate fields (PDSI, SST, soil moisture).
+    and hydroclimate fields (PDSI, SST, soil moisture). 
+    Analyze lagged regressions, visualize teleconnections, and uncover global drought patterns.
   </p>
   <a href="https://github.com/yourusername/hydra" class="btn" style="margin-top: 20px; background: #95d5b2; color: #1b4332; padding: 12px 24px; border-radius: 8px; text-decoration: none; font-weight: bold;">
     View on GitHub
@@ -33,7 +18,7 @@ title: HYDRA Project
 </section>
 
 <!-- Features Section -->
-<section id="features" style="padding: 60px 20px; max-width: 1000px; margin: auto; text-align:center;">
+<section style="padding: 60px 20px; max-width: 1000px; margin: auto; text-align:center;">
   <h2>🔑 Key Features</h2>
   <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px; text-align:left;">
     <div style="background:#f8f9fa; padding:20px; border-radius:10px;">
@@ -56,7 +41,7 @@ title: HYDRA Project
 </section>
 
 <!-- Example Section -->
-<section id="example" style="background:#e9f5ec; padding: 60px 20px; text-align:center;">
+<section style="background:#e9f5ec; padding: 60px 20px; text-align:center;">
   <h2>📊 Example Output</h2>
   <img src="assets/images/example_output.png" alt="Example Map" style="max-width:80%; border-radius:10px; margin:20px auto;">
   <p style="max-width: 700px; margin: 0 auto; font-size: 1.1em;">
@@ -65,7 +50,7 @@ title: HYDRA Project
 </section>
 
 <!-- Quick Start Section -->
-<section id="quickstart" style="padding: 60px 20px; max-width: 900px; margin: auto; text-align:center;">
+<section style="padding: 60px 20px; max-width: 900px; margin: auto; text-align:center;">
   <h2>🚀 Quick Start</h2>
   <pre style="text-align:left; background:#212529; color:#f8f9fa; padding:20px; border-radius:10px; overflow-x:auto;">
 git clone https://github.com/yourusername/hydra.git
