updated index add nav bar

--- a/index.html
+++ b/index.html
@@ -3,6 +3,24 @@ layout: default
 title: HYDRA Project
 ---
 
+<!-- Navbar -->
+<nav style="position:fixed; top:0; left:0; right:0; background:#1b4332; padding:12px 40px; display:flex; justify-content:space-between; align-items:center; z-index:1000; box-shadow:0 2px 6px rgba(0,0,0,0.2);">
+  <!-- Left side logo/title -->
+  <div style="color:white; font-weight:bold; font-size:1.3em;">
+    <a href="/" style="color:white; text-decoration:none;">HYDRA</a>
+  </div>
+  <!-- Right side links -->
+  <div>
+    <a href="/enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
+    <a href="/pdo.html" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
+    <a href="/iod.html" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
+    <a href="/amo.html" style="color:white; margin:0 15px; text-decoration:none;">AMO</a>
+  </div>
+</nav>
+
+<!-- Add spacing so content isn’t hidden under navbar -->
+<div style="height:70px;"></div>
+
 <!-- Banner Section -->
 <section style="text-align:center; padding: 80px 20px; background: linear-gradient(135deg, #1b4332, #2d6a4f); color: white;">
   <h1 style="font-size: 3em; margin-bottom: 0.3em;">HYDRA</h1>
@@ -73,5 +91,5 @@ jupyter notebook examples/enso_pdsi_regression.ipynb
 <section style="padding: 60px 20px; text-align:center;">
   <h2>🙌 Contributing & Contact</h2>
   <p>Contributions are welcome! Submit a pull request or open an issue.</p>
-  <p>For questions, email <a href="mailto:your.email@domain.edu">your.email@domain.edu</a>.</p>
+  <p>For questions, email <a href="mailto:aandishah.s@columbia.edu">aandishah.s@columbia.edu</a>.</p>
 </section>
