added some more index pages

--- a/pdo.html
+++ b/pdo.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: ENSO | HYDRA Project
+title: PDO | HYDRA Project
 ---
 
 <!-- Navbar -->
@@ -11,7 +11,7 @@ title: ENSO | HYDRA Project
   <div>
     <a href="enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
     <a href="pdo.html" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
-    <a href="/iod.html" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
+    <a href="iod.html" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
     <a href="amo.html" style="color:white; margin:0 15px; text-decoration:none;">AMO</a>
     <a href="nao.html" style="color:white; margin:0 15px; text-decoration:none;">NAO</a>
     <a href="sam.html" style="color:white; margin:0 15px; text-decoration:none;">SAM</a>
@@ -23,9 +23,9 @@ title: ENSO | HYDRA Project
 <div style="height:70px;"></div>
 
 <section style="text-align:center; padding: 100px 20px; background: linear-gradient(135deg, #1b4332, #2d6a4f); color: white;">
-  <h1 style="font-size: 3em; margin-bottom: 0.3em;">ENSO</h1>
-  <h2 style="font-weight: 400; margin-bottom: 1em;">El Niño–Southern Oscillation</h2>
+  <h1 style="font-size: 3em; margin-bottom: 0.3em;">PDO</h1>
+  <h2 style="font-weight: 400; margin-bottom: 1em;">Pacific Decadal Oscillation</h2>
   <p style="font-size: 1.2em; max-width: 700px; margin: 0 auto;">
-    Analyze the influence of ENSO (El Niño & La Niña) on drought, rainfall, and global hydroclimate variability.
+    Explore how decadal-scale Pacific variability influences drought persistence, rainfall, and global teleconnections.
   </p>
 </section>
