--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ title: HYDRA Project
   </div>
   <!-- Right side links -->
   <div>
-    <a href="/enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
-    <a href="/pdo.html" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
-    <a href="/iod.html" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
-    <a href="/amo.html" style="color:white; margin:0 15px; text-decoration:none;">AMO</a>
-    <a href="/amo.html" style="color:white; margin:0 15px; text-decoration:none;">NAO</a>
-    <a href="/amo.html" style="color:white; margin:0 15px; text-decoration:none;">SAM</a>
-    <a href="/amo.html" style="color:white; margin:0 15px; text-decoration:none;">NAM</a>
+    <a href="enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
+    <a href="pdo.html" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
+    <a href="iod.html" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
+    <a href="amo.html" style="color:white; margin:0 15px; text-decoration:none;">AMO</a>
+    <a href="amo.html" style="color:white; margin:0 15px; text-decoration:none;">NAO</a>
+    <a href="amo.html" style="color:white; margin:0 15px; text-decoration:none;">SAM</a>
+    <a href="amo.html" style="color:white; margin:0 15px; text-decoration:none;">NAM</a>
       <a href="/amo.html" style="color:white; margin:0 15px; text-decoration:none;">PNA</a>
   </div>
 </nav>
