--- a/enso.html
+++ b/enso.html
@@ -10,7 +10,7 @@ title: ENSO | HYDRA Project
   </div>
   <div>
 <div>
-  <a href="./enso/" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
+  <a href="enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
   <a href="./pdo/" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
   <a href="./iod/" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
   <a href="./amo/" style="color:white; margin:0 15px; text-decoration:none;">AMO</a>
