add all index files

--- a/enso.html
+++ b/enso.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: ENSO | HYDRA Project
+title: ENSO | HYDRA
 ---
 
 <!-- Navbar -->
@@ -9,17 +9,14 @@ title: ENSO | HYDRA Project
     <a href="/" style="color:white; text-decoration:none;">HYDRA</a>
   </div>
   <div>
-<div>
-  <a href="enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
-  <a href="./pdo/" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
-  <a href="./iod/" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
-  <a href="./amo/" style="color:white; margin:0 15px; text-decoration:none;">AMO</a>
-  <a href="./nao/" style="color:white; margin:0 15px; text-decoration:none;">NAO</a>
-  <a href="./sam/" style="color:white; margin:0 15px; text-decoration:none;">SAM</a>
-  <a href="./nam/" style="color:white; margin:0 15px; text-decoration:none;">NAM</a>
-  <a href="./pna/" style="color:white; margin:0 15px; text-decoration:none;">PNA</a>
-</div>
-
+    <a href="enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
+    <a href="pdo.html" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
+    <a href="iod.html" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
+    <a href="amo.html" style="color:white; margin:0 15px; text-decoration:none;">AMO</a>
+    <a href="nao.html" style="color:white; margin:0 15px; text-decoration:none;">NAO</a>
+    <a href="sam.html" style="color:white; margin:0 15px; text-decoration:none;">SAM</a>
+    <a href="nam.html" style="color:white; margin:0 15px; text-decoration:none;">NAM</a>
+    <a href="pna.html" style="color:white; margin:0 15px; text-decoration:none;">PNA</a>
   </div>
 </nav>
 
