--- a/nao.html
+++ b/nao.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: AMO | HYDRA 
+title: NAO | HYDRA Project
 ---
 
-<!-- Navbar -->
 <nav style="position:fixed; top:0; left:0; right:0; background:#1b4332; padding:12px 40px; display:flex; justify-content:space-between; align-items:center; z-index:1000; box-shadow:0 2px 6px rgba(0,0,0,0.2);">
   <div style="color:white; font-weight:bold; font-size:1.3em;">
     <a href="/" style="color:white; text-decoration:none;">HYDRA</a>
@@ -23,9 +22,9 @@ title: AMO | HYDRA
 <div style="height:70px;"></div>
 
 <section style="text-align:center; padding: 100px 20px; background: linear-gradient(135deg, #1b4332, #2d6a4f); color: white;">
-  <h1 style="font-size: 3em; margin-bottom: 0.3em;">AMO</h1>
-  <h2 style="font-weight: 400; margin-bottom: 1em;">Atlantic Multidecadal Oscillation</h2>
+  <h1 style="font-size: 3em; margin-bottom: 0.3em;">NAO</h1>
+  <h2 style="font-weight: 400; margin-bottom: 1em;">North Atlantic Oscillation</h2>
   <p style="font-size: 1.2em; max-width: 700px; margin: 0 auto;">
-    Examine long-term Atlantic variability and its connection to droughts, rainfall shifts, and global teleconnections.
+    Understand how the NAO drives seasonal precipitation and drought variability across Europe and beyond.
   </p>
 </section>
