--- a/pna.html
+++ b/pna.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: AMO | HYDRA 
+title: PNA | HYDRA 
 ---
 
 <!-- Navbar -->
@@ -23,9 +23,9 @@ title: AMO | HYDRA
 <div style="height:70px;"></div>
 
 <section style="text-align:center; padding: 100px 20px; background: linear-gradient(135deg, #1b4332, #2d6a4f); color: white;">
-  <h1 style="font-size: 3em; margin-bottom: 0.3em;">AMO</h1>
-  <h2 style="font-weight: 400; margin-bottom: 1em;">Atlantic Multidecadal Oscillation</h2>
+  <h1 style="font-size: 3em; margin-bottom: 0.3em;">PNA</h1>
+  <h2 style="font-weight: 400; margin-bottom: 1em;"> Pacific-North American Index (PNA)</h2>
   <p style="font-size: 1.2em; max-width: 700px; margin: 0 auto;">
-    Examine long-term Atlantic variability and its connection to droughts, rainfall shifts, and global teleconnections.
+    Examine long-term Pacific-North American variability and its connection to droughts, rainfall shifts, and global teleconnections.
   </p>
 </section>
