--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ title: HYDRA Project
     <a href="/" style="color:white; text-decoration:none;">HYDRA</a>
   </div>
   <div>
-    <a href="enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
-    <a href="pdo.html" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
+    <a href="/enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
+    <a href="/pdo.html" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
     <a href="iod.html" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
     <a href="amo.html" style="color:white; margin:0 15px; text-decoration:none;">AMO</a>
     <a href="nao.html" style="color:white; margin:0 15px; text-decoration:none;">NAO</a>
