--- a/pdo.html
+++ b/pdo.html
@@ -1,22 +1,22 @@
 ---
 layout: default
-title: PDO | HYDRA Project
+title: PDO | HYDRA 
 ---
 
 <!-- Navbar -->
 <nav style="position:fixed; top:0; left:0; right:0; background:#1b4332; padding:12px 40px; display:flex; justify-content:space-between; align-items:center; z-index:1000; box-shadow:0 2px 6px rgba(0,0,0,0.2);">
   <div style="color:white; font-weight:bold; font-size:1.3em;">
-    <a href="/" style="color:white; text-decoration:none;">HYDRA</a>
+    <a href="/index.html" style="color:white; text-decoration:none;">HYDRA</a>
   </div>
   <div>
-    <a href="enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
-    <a href="pdo.html" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
-    <a href="iod.html" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
-    <a href="amo.html" style="color:white; margin:0 15px; text-decoration:none;">AMO</a>
-    <a href="nao.html" style="color:white; margin:0 15px; text-decoration:none;">NAO</a>
-    <a href="sam.html" style="color:white; margin:0 15px; text-decoration:none;">SAM</a>
-    <a href="nam.html" style="color:white; margin:0 15px; text-decoration:none;">NAM</a>
-    <a href="pna.html" style="color:white; margin:0 15px; text-decoration:none;">PNA</a>
+    <a href="/enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
+    <a href="/pdo.html" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
+    <a href="/iod.html" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
+    <a href="/amo.html" style="color:white; margin:0 15px; text-decoration:none;">AMO</a>
+    <a href="/nao.html" style="color:white; margin:0 15px; text-decoration:none;">NAO</a>
+    <a href="/sam.html" style="color:white; margin:0 15px; text-decoration:none;">SAM</a>
+    <a href="/nam.html" style="color:white; margin:0 15px; text-decoration:none;">NAM</a>
+    <a href="/pna.html" style="color:white; margin:0 15px; text-decoration:none;">PNA</a>
   </div>
 </nav>
 
@@ -29,6 +29,3 @@ title: PDO | HYDRA Project
     Explore how decadal-scale Pacific variability influences drought persistence, rainfall, and global teleconnections.
   </p>
 </section>
-
-
- 
