--- a/sam.html
+++ b/sam.html
@@ -1,11 +1,12 @@
 ---
 layout: default
-title: SAM | HYDRA Project
+title: SAM | HYDRA 
 ---
 
+<!-- Navbar -->
 <nav style="position:fixed; top:0; left:0; right:0; background:#1b4332; padding:12px 40px; display:flex; justify-content:space-between; align-items:center; z-index:1000; box-shadow:0 2px 6px rgba(0,0,0,0.2);">
   <div style="color:white; font-weight:bold; font-size:1.3em;">
-    <a href="/" style="color:white; text-decoration:none;">HYDRA</a>
+    <a href="/index.html" style="color:white; text-decoration:none;">HYDRA</a>
   </div>
   <div>
     <a href="/enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
@@ -25,6 +26,6 @@ title: SAM | HYDRA Project
   <h1 style="font-size: 3em; margin-bottom: 0.3em;">SAM</h1>
   <h2 style="font-weight: 400; margin-bottom: 1em;">Southern Annular Mode</h2>
   <p style="font-size: 1.2em; max-width: 700px; margin: 0 auto;">
-    Track shifts in the Southern Hemisphere jet streams and their influence on rainfall and drought variability.
+    Analyze the influence of Southern Hemisphere jet streams on drought, rainfall, and global hydroclimate variability.
   </p>
 </section>
