--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: HYDRA Project
     <a href="/pdo.html" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
     <a href="/iod.html" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
     <a href="/amo.html" style="color:white; margin:0 15px; text-decoration:none;">AMO</a>
-    <a href=/nao.html" style="color:white; margin:0 15px; text-decoration:none;">NAO</a>
+    <a href="/nao.html" style="color:white; margin:0 15px; text-decoration:none;">NAO</a>
     <a href="/sam.html" style="color:white; margin:0 15px; text-decoration:none;">SAM</a>
     <a href="/nam.html" style="color:white; margin:0 15px; text-decoration:none;">NAM</a>
     <a href="/pna.html" style="color:white; margin:0 15px; text-decoration:none;">PNA</a>
