--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ title: HYDRA Project
     <a href="/index.html" style="color:white; text-decoration:none;">HYDRA</a>
   </div>
   <div>
-    <a href="enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
-    <a href="pdo.html" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
-    <a href="iod.html" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
+    <a href="./enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
+    <a href="/pdo.html" style="color:white; margin:0 15px; text-decoration:none;">PDO</a>
+    <a href="./iod/" style="color:white; margin:0 15px; text-decoration:none;">IOD</a>
     <a href="amo.html" style="color:white; margin:0 15px; text-decoration:none;">AMO</a>
     <a href="/nao.html" style="color:white; margin:0 15px; text-decoration:none;">NAO</a>
     <a href="/sam.html" style="color:white; margin:0 15px; text-decoration:none;">SAM</a>
