updated the filepaths

--- a/iod.html
+++ b/iod.html
@@ -23,7 +23,7 @@ title: IOD | HYDRA
 <div style="height:70px;"></div>
 
 <section style="text-align:center; padding: 100px 20px; background: linear-gradient(135deg, #1b4332, #2d6a4f); color: white;">
-  <h1 style="font-size: 3em; margin-bottom: 0.3em;">NAM</h1>
+  <h1 style="font-size: 3em; margin-bottom: 0.3em;"> IOD </h1>
   <h2 style="font-weight: 400; margin-bottom: 1em;"> Indian Dipole Index </h2>
   <p style="font-size: 1.2em; max-width: 700px; margin: 0 auto;">
     Investigate the Indian Ocean’s role in shaping temperature extremes, precipitation shifts, and drought risk across the globe.
