--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: HYDRA Project
+title: HYDRA | HYdrological Drought & Rainfall Atlas
 ---
 
 <!-- Navbar -->
 <nav style="position:fixed; top:0; left:0; right:0; background:#1b4332; padding:12px 40px; display:flex; justify-content:space-between; align-items:center; z-index:1000; box-shadow:0 2px 6px rgba(0,0,0,0.2);">
   <div style="color:white; font-weight:bold; font-size:1.3em;">
-    <a href="./index.html" style="color:white; text-decoration:none;">HYDRA</a>
+    <a href="./" style="color:white; text-decoration:none;">HYDRA | HYdrological Drought & Rainfall Atlas</a>
   </div>
   <div>
     <a href="./enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
@@ -28,18 +28,18 @@ title: HYDRA Project
   <h1 style="font-size: 3em; margin-bottom: 0.3em;">HYDRA</h1>
   <h2 style="font-weight: 400; margin-bottom: 1em;">HYdrological Drought & Rainfall Atlas</h2>
   <p style="font-size: 1.2em; max-width: 700px; margin: 0 auto;">
-    A Python toolkit for exploring the links between climate variability modes (ENSO, PDO, AMO, IOD) 
-    and hydroclimate fields (PDSI, SST, soil moisture). 
-    Analyze lagged regressions, visualize teleconnections, and uncover global drought patterns.
+    A Python toolkit for exploring the links between climate variability modes
+    and hydroclimate fields. 
+    Analyze lagged regressions, visualize the connections between different modes of climate variability and global drought and rainfall patterns.
   </p>
-  <a href="https://github.com/yourusername/hydra" class="btn" style="margin-top: 20px; background: #95d5b2; color: #1b4332; padding: 12px 24px; border-radius: 8px; text-decoration: none; font-weight: bold;">
+  <!-- <a href="https://github.com/yourusername/hydra" class="btn" style="margin-top: 20px; background: #95d5b2; color: #1b4332; padding: 12px 24px; border-radius: 8px; text-decoration: none; font-weight: bold;">
     View on GitHub
-  </a>
+  </a> -->
 </section>
 
 <!-- Features Section -->
 <section style="padding: 60px 20px; max-width: 1000px; margin: auto; text-align:center;">
-  <h2>🔑 Key Features</h2>
+  <h2>Key Features</h2>
   <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px; text-align:left;">
     <div style="background:#f8f9fa; padding:20px; border-radius:10px;">
       <h3>Lagged Regression</h3>
@@ -49,20 +49,21 @@ title: HYDRA Project
       <h3>Flexible Inputs</h3>
       <p>Works seamlessly with <code>xarray</code> seasonal datasets (DJF, MAM, JJA, SON).</p>
     </div>
-    <div style="background:#f8f9fa; padding:20px; border-radius:10px;">
+    <!-- <div style="background:#f8f9fa; padding:20px; border-radius:10px;">
       <h3>Detrending & Significance</h3>
       <p>Built-in detrending and p-value maps with hatching for non-significant regions.</p>
-    </div>
+    </div> -->
     <div style="background:#f8f9fa; padding:20px; border-radius:10px;">
       <h3>Custom Plotting</h3>
-      <p>Beautiful seasonal maps and multi-panel plots with clean color schemes.</p>
+      <p>Seasonal maps and multi-panel plots with clean color schemes.</p>
     </div>
   </div>
 </section>
 
 <!-- Example Section -->
 <section style="background:#e9f5ec; padding: 60px 20px; text-align:center;">
-  <h2>📊 Example Output</h2>
+  <h2> Method </h2>
+  <h3> HYdrological Drought & Rainfall Atlas </h3>
   <img src="assets/images/example_output.png" alt="Example Map" style="max-width:80%; border-radius:10px; margin:20px auto;">
   <p style="max-width: 700px; margin: 0 auto; font-size: 1.1em;">
     Regression of ENSO onto global PDSI, with hatching for non-significant areas.
@@ -85,7 +86,7 @@ jupyter notebook examples/enso_pdsi_regression.ipynb
   <h2>📜 Citation</h2>
   <p>If you use HYDRA in your research, please cite:</p>
   <blockquote style="max-width:700px; margin:20px auto; font-style:italic;">
-    Samara, A. T., et al. (2025). HYDRA: A Python Toolkit for Climate Teleconnection and Drought Analysis.
+    Samara, A. T., et al. (XXXX). HYDRA: TBD</h3>
   </blockquote>
 </section>
 
@@ -93,5 +94,5 @@ jupyter notebook examples/enso_pdsi_regression.ipynb
 <section style="padding: 60px 20px; text-align:center;">
   <h2>🙌 Contributing & Contact</h2>
   <p>Contributions are welcome! Submit a pull request or open an issue.</p>
-  <p>For questions, email <a href="mailto:aandishah.s@columbia.edu">aandishah.s@columbia.edu</a>.</p>
+  <p>For questions, email <a href="mailto:aandishah@gmail.com">aandishah@gmail.com</a>.</p>
 </section>
