--- a/enso.html
+++ b/enso.html
@@ -28,4 +28,19 @@ title: ENSO | HYDRA
   <p style="font-size: 1.2em; max-width: 700px; margin: 0 auto;">
     Analyze the influence of ENSO (El Niño & La Niña) on drought, rainfall, and global hydroclimate variability.
   </p>
+  <section style="text-align:center; padding:60px 20px;">
+  <h2 style="margin-bottom: 1em;">ENSO Index & Power Spectrum</h2>
+  
+  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:30px;">
+    <div>
+      <img src="./figures/ENSO_Index_PSD_LT.png" alt="ENSO Index PSD Long-Term" style="max-width:700px; width:100%; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
+      <p style="margin-top:10px; font-size:0.95em; color:#444;">ENSO Index and PSD (Long-Term)</p>
+    </div>
+    <div>
+      <img src="./figures/ENSO_Index_PSD_ST.png" alt="ENSO Index PSD Short-Term" style="max-width:700px; width:100%; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
+      <p style="margin-top:10px; font-size:0.95em; color:#444;">ENSO Index and PSD (Short-Term)</p>
+    </div>
+  </div>
+</section>
+
 </section>
