--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: HYDRA | HYdrological Drought & Rainfall Atlas
+title: HYDRA | Hydrological Drought & Rainfall Atlas
 ---
 
 <!-- Navbar -->
