--- a/enso.html
+++ b/enso.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: ENSO | Hydrological Drought & Rainfall Atlas
+title: ENSO 
 ---
 
 <!-- Navbar -->
 <nav style="position:fixed; top:0; left:0; right:0; background:#1b4332; padding:12px 40px; display:flex; justify-content:space-between; align-items:center; z-index:1000; box-shadow:0 2px 6px rgba(0,0,0,0.2);">
   <div style="color:white; font-weight:bold; font-size:1.3em;">
-    <a href="./index.html" style="color:white; text-decoration:none;">HYDRA</a>
+    <a href="./index.html" style="color:white; text-decoration:none;">HYDRA | Hydrological Drought & Rainfall Atlas</a>
   </div>
   <div>
     <a href="./enso.html" style="color:white; margin:0 15px; text-decoration:none;">ENSO</a>
