--- a/enso.html
+++ b/enso.html
@@ -25,8 +25,9 @@ title: ENSO
 <section style="text-align:center; padding: 100px 20px; background: linear-gradient(135deg, #1b4332, #2d6a4f); color: white;">
   <h1 style="font-size: 3em; margin-bottom: 0.3em;">ENSO</h1>
   <h2 style="font-weight: 400; margin-bottom: 1em;">El Niño–Southern Oscillation</h2>
-  <p style="font-size: 1.2em; max-width: 700px; margin: 0 auto;">
-    Analyze the influence of ENSO (El Niño & La Niña) on drought, rainfall, and global hydroclimate variability.
+  <p style="font-size: 1.2em; max-width: 700px; margin: 0.1 auto;">
+    Analyze the influence of ENSO on global hydroclimate variability.
+
   </p>
 
     <!-- Buttons -->
