--- a/enso.html
+++ b/enso.html
@@ -51,6 +51,45 @@ title: ENSO
   </p>
 </section>
 
+<!-- ENSO Long Term Section -->
+<section id="enso-long" style="text-align:center; padding:100px 20px; background: linear-gradient(135deg, #1b4332, #2d6a4f); color: white; border-radius:12px; margin:40px auto; max-width:1200px;">
+  <h1 style="font-size: 3em; margin-bottom: 0.3em;">ENSO Long Term</h1>
+  <h2 style="font-weight: 400; margin-bottom: 1em;">1903–2023</h2>
+  <p style="font-size: 1.2em; max-width: 700px; margin: 0 auto 2em;">
+    Explore ENSO impacts on hydroclimate over the century-plus record.
+  </p>
+
+  <!-- Toggle Buttons -->
+  <div style="margin-bottom:30px;">
+    <button onclick="showImage('pdsi')" style="margin:5px; padding:12px 24px; border:none; border-radius:8px; background:#95d5b2; color:#1b4332; font-weight:bold; cursor:pointer;">PDSI</button>
+    <button onclick="showImage('ppt')" style="margin:5px; padding:12px 24px; border:none; border-radius:8px; background:#95d5b2; color:#1b4332; font-weight:bold; cursor:pointer;">PPT</button>
+    <button onclick="showImage('tmp')" style="margin:5px; padding:12px 24px; border:none; border-radius:8px; background:#95d5b2; color:#1b4332; font-weight:bold; cursor:pointer;">TMP</button>
+    <button onclick="showImage('all')" style="margin:5px; padding:12px 24px; border:none; border-radius:8px; background:#95d5b2; color:#1b4332; font-weight:bold; cursor:pointer;">ALL</button>
+  </div>
+
+  <!-- Image Containers -->
+  <div id="image-container" style="max-width:900px; margin:0 auto;">
+    <img id="pdsi" src="./Figures/ENSO/ENSO_LT_REG_PDSI.png" alt="ENSO Long Term PDSI" style="width:100%; display:none; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
+    <img id="ppt"  src="./Figures/ENSO/ENSO_LT_REG_PPT.png"  alt="ENSO Long Term PPT"  style="width:100%; display:none; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
+    <img id="tmp"  src="./Figures/ENSO/ENSO_LT_REG_TMP.png"  alt="ENSO Long Term TMP"  style="width:100%; display:none; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
+    <img id="all"  src="./Figures/ENSO/ENSO_LT_REG_COMBO.png" alt="ENSO Long Term ALL"  style="width:100%; display:none; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
+  </div>
+</section>
+
+<!-- Script to handle toggle -->
+<script>
+function showImage(id) {
+  // Hide all
+  document.querySelectorAll('#image-container img').forEach(img => img.style.display = 'none');
+  // Show selected
+  document.getElementById(id).style.display = 'block';
+}
+
+// Show PDSI by default
+showImage('pdsi');
+</script>
+
+
 <section id="enso-short" style="text-align:center; padding:60px 20px;">
   <h2 style="margin-bottom: 1em;">ENSO Index & Power Spectrum (Short Term: 1980–2023)</h2>
   <img src="./Figures/ENSO/ENSO_Index_PSD_ST.png" 
