--- a/enso.html
+++ b/enso.html
@@ -23,11 +23,10 @@ title: ENSO
 <div style="height:70px;"></div>
 
 <section style="text-align:center; padding: 100px 20px; background: linear-gradient(135deg, #1b4332, #2d6a4f); color: white;">
-  <h1 style="font-size: 3em; margin-bottom: 0.3em;">ENSO</h1>
-  <h2 style="font-weight: 400; margin-bottom: 1em;">El Niño–Southern Oscillation</h2>
+  <h1 style="font-size: 3em; margin-bottom: 0.3em; color: white;">ENSO</h1>
+  <h2 style="font-weight: 400; margin-bottom: 1em;color: white;">El Niño–Southern Oscillation</h2>
   <p style="font-size: 1.2em; max-width: 700px; margin: 0.1 auto;">
     Analyze the influence of ENSO on global hydroclimate variability.
-
   </p>
 
     <!-- Buttons -->
@@ -41,32 +40,22 @@ title: ENSO
   </div>
 </section>
 
-<!-- <section id="enso-long" style="text-align:center; padding:60px 20px;">
-  <h2 style="margin-bottom: 1em;">ENSO Index & Power Spectrum (Long Term: 1903–2023)</h2>
-  <img src="./Figures/ENSO/ENSO_Index_PSD_LT.png" 
-       alt="ENSO Index PSD Long-Term" 
-       style="max-width:700px; width:100%; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
-  <p style="margin-top:10px; font-size:0.95em; color:#444;">
-    ENSO Index and PSD (Long-Term)
-  </p>
-</section> -->
-
 <!-- ENSO Long Term Section -->
 <section id="enso-long" style="text-align:center; padding:100px 20px; background: linear-gradient(135deg, #1b4332, #2d6a4f); color: white; border-radius:12px; margin:40px auto; max-width:1200px;">
-  <h1 style="font-size: 3em; margin-bottom: 0.1em;">ENSO Long Term</h1>
-  <h2 style="font-weight: 400; margin-bottom: 1em;">1903–2023</h2>
+  <h1 style="font-size: 3em; margin-bottom: 0.1em; color: white;">ENSO Long Term</h1>
+  <h2 style="font-weight: 400; margin-bottom: 1em; color: white;">1903–2023</h2>
   
-  <h2 style="margin-bottom: 1em;">Index & Power Spectrum</h2>
+  <h2 style="margin-bottom: 1em;color: white;">Index & Power Spectrum</h2>
   <img src="./Figures/ENSO/ENSO_Index_PSD_LT.png" 
        alt="ENSO Index PSD Long-Term" 
        style="max-width:1000px; width:100%; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
   <p style="margin-top:10px; font-size:0.95em; color:#444;">
     ENSO Index and PSD (Long-Term)
   </p>
-  <h1 style="font-size: 2.5em; margin-bottom: 0.1em;">
+  <h1 style="font-size: 2.5em; margin-bottom: 0.1em;color: white;">
   Regression Analysis 
   </h1>
-  <h3 style="margin-bottom: 1em;">
+  <h3 style="margin-bottom: 1em;color: white;">
   Explore ENSO impacts on hydroclimate over the century-plus record.
   </h3>
 
@@ -107,9 +96,6 @@ showImage('pdsi');
   <img src="./Figures/ENSO/ENSO_Index_PSD_ST.png" 
        alt="ENSO Index PSD Short-Term" 
        style="max-width:700px; width:100%; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
-  <p style="margin-top:10px; font-size:0.95em; color:#444;">
-    ENSO Index and PSD (Short-Term)
-  </p>
 </section>
 
 
