--- a/enso.html
+++ b/enso.html
@@ -91,7 +91,7 @@ showImage('pdsi');
 </script>
 
 
-<section id="enso-short" style="text-align:center; padding:60px 20px;">
+<!-- <section id="enso-short" style="text-align:center; padding:60px 20px;">
   <h2 style="margin-bottom: 1em;">ENSO Index & Power Spectrum (Short Term: 1980–2023)</h2>
   <img src="./Figures/ENSO/ENSO_Index_PSD_ST.png" 
        alt="ENSO Index PSD Short-Term" 
@@ -99,4 +99,54 @@ showImage('pdsi');
 </section>
 
 
+</section> -->
+
+<!-- ENSO Short Term Section -->
+<section id="enso-short" style="text-align:center; padding:100px 20px; background: linear-gradient(135deg, #1b4332, #2d6a4f); color: white; border-radius:12px; margin:40px auto; max-width:1200px;">
+  <h1 style="font-size: 3em; margin-bottom: 0.1em; color: white;">ENSO Short Term</h1>
+  <h2 style="font-weight: 400; margin-bottom: 1em; color: white;">1980–2023</h2>
+  
+  <h2 style="margin-bottom: 1em;color: white;">Index & Power Spectrum</h2>
+  <img src="./Figures/ENSO/ENSO_Index_PSD_ST.png" 
+       alt="ENSO Index PSD Short-Term" 
+       style="max-width:1000px; width:100%; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
+  <p style="margin-top:10px; font-size:0.95em; color:#444;">
+    ENSO Index and PSD (Short-Term)
+  </p>
+  <h1 style="font-size: 2.5em; margin-bottom: 0.1em;color: white;">
+  Regression Analysis 
+  </h1>
+  <h3 style="margin-bottom: 1em;color: white;">
+  Explore ENSO impacts on hydroclimate over the recent record.
+  </h3>
+
+  <!-- Toggle Buttons -->
+  <div style="margin-bottom:30px;">
+    <button onclick="showImageST('pdsiST')" style="margin:5px; padding:12px 24px; border:none; border-radius:8px; background:#95d5b2; color:#1b4332; font-weight:bold; cursor:pointer;">PDSI</button>
+    <button onclick="showImageST('pptST')"  style="margin:5px; padding:12px 24px; border:none; border-radius:8px; background:#95d5b2; color:#1b4332; font-weight:bold; cursor:pointer;">PPT</button>
+    <button onclick="showImageST('tmpST')"  style="margin:5px; padding:12px 24px; border:none; border-radius:8px; background:#95d5b2; color:#1b4332; font-weight:bold; cursor:pointer;">TMP</button>
+    <button onclick="showImageST('allST')"  style="margin:5px; padding:12px 24px; border:none; border-radius:8px; background:#95d5b2; color:#1b4332; font-weight:bold; cursor:pointer;">ALL</button>
+  </div>
+
+  <!-- Image Containers -->
+  <div id="image-container-ST" style="max-width:900px; margin:0 auto;">
+    <img id="pdsiST" src="./Figures/ENSO/ENSO_ST_REG_PDSI.png" alt="ENSO Short Term PDSI" style="width:100%; display:none; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
+    <img id="pptST"  src="./Figures/ENSO/ENSO_ST_REG_PPT.png"  alt="ENSO Short Term PPT"  style="width:100%; display:none; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
+    <img id="tmpST"  src="./Figures/ENSO/ENSO_ST_REG_TMP.png"  alt="ENSO Short Term TMP"  style="width:100%; display:none; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
+    <img id="allST"  src="./Figures/ENSO/ENSO_ST_REG_COMBO.png" alt="ENSO Short Term ALL"  style="width:100%; display:none; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
+  </div>
 </section>
+
+<!-- Script to handle toggle -->
+<script>
+function showImageST(id) {
+  // Hide all ST images
+  document.querySelectorAll('#image-container-ST img').forEach(img => img.style.display = 'none');
+  // Show selected ST image
+  document.getElementById(id).style.display = 'block';
+}
+
+// Show PDSI by default
+showImageST('pdsiST');
+</script>
+
